--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -40,8 +40,7 @@
     {
       "command": "make clean;make",
       "dependsOn": [
-        "build_libdaisy",
-        "build_daisysp"
+        "build_libdaisy"
       ],
       "label": "build_all",
       "options": {
@@ -55,8 +54,7 @@
     {
       "command": "make clean;DEBUG=1 make",
       "dependsOn": [
-        "build_libdaisy",
-        "build_daisysp"
+        "build_libdaisy"
       ],
       "label": "build_all_debug",
       "options": {
@@ -83,18 +81,7 @@
       "command": "make",
       "label": "build_libdaisy",
       "options": {
-        "cwd": "${workspaceFolder}/../libDaisy/"
-      },
-      "problemMatcher": [
-        "$gcc"
-      ],
-      "type": "shell"
-    },
-    {
-      "command": "make",
-      "label": "build_daisysp",
-      "options": {
-        "cwd": "${workspaceFolder}/../DaisySP/"
+        "cwd": "${workspaceFolder}/lib/libdaisy/"
       },
       "problemMatcher": [
         "$gcc"
